fixes #572   unexpected scrollbars

--- a/geoportailv3/static/less/sidebar.less
+++ b/geoportailv3/static/less/sidebar.less
@@ -61,7 +61,7 @@
     transition: none;
   }
   #infos .container-fluid {
-    overflow-y: scroll;
+    overflow-y: auto;
     max-height: 80%; //fallback for browsers without calc support
     max-height: ~"calc(100% - 80px)";
     
